Add phone login and account activation
